2009-09-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (on_notification_timeline_new_frame):
	  Align notifications to the narrower tasks button and use easing.

2009-09-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#140044 - When trying to start panning the desktop over a
	widget it is too easy to start the widget instead

	* src/home/hd-home.c (HdHomeDrag, hd_home_desktop_motion,
	  hd_home_desktop_release, hd_home_desktop_press, hd_home_applet_press,
	  hd_home_applet_release, do_home_applet_motion,
	  hd_home_applet_motion): Use the release event coordinates for a
	  simulated motion event before handle the release.

2009-09-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-home.c: Remove hd_home_applet_press and
	hd_home_applet_release g_warning spam.

2009-09-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Applying Marc's patch:
	Fixes: NB#138800 (S3,crash) Desktop crashed.
	* src/launcher/hd-launcher.c
	* src/launcher/hd-app-mgr.c: When traversing over tree items, make
	  a copy of the list of items rather than using it directly. 
	* src/hildon-desktop.h: Allow reading of HD_NOTHREADS, but only
	  in debug of x86 mode

2009-09-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#139904 (S3) Non-comp exiting from full screen makes browser
	                      title overlapping status bar
	* src/home/hd-render-manager.c: Re-evaluate where title bar elements
	  are placed immediately after we make status area visible (after it
	  has been invisible). 

2009-09-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Another fix for new portrait transition. Make sure no apps are
	resized in the background.
	* src/util/hd-transition.c
	* src/util/hd-transition.h: add hd_transition_is_rotating_to_portrait
	* src/mb/hd-app.c: Now check for hd_transition_is_rotating_to_portrait
	  before resizing an app, as we may not be in portrait mode yet, but